<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/onTheater"
        android:title="@string/action_ontheater"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_movie_white"
        >
    </item>
    <item
        android:id="@+id/movieNews"
        android:title="@string/action_news"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_news">
    </item>
    <item
        android:id="@+id/bestMovies"
        android:title="@string/action_movie"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_ontheater">
    </item>
    <item
        android:id="@+id/watchList"
        android:title="@string/action_watchlist"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_watch_list_white">
    </item>
    <item
        android:id="@+id/search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_search">
    </item>

</menu>